[package]
name = "clustownr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal = "0.7.0"
signal-hook = "0.3.17"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3"
futures-util = "0.3"
url = "2.5.2"
hyper = { version = "1.4.1", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.7", features = ["json"] }